Added an option to use the server jar's home directory instead of SpigotGUI's home directory